# ktw_scraping_data

./: .gitignore  Cargo.toml  DRUMMY_TEXT.md  README.md  category.json  ktw_products.csv  not_found.csv  updated.csv
src/: cargo_run.bat  config.json  config.rs  main-backup.rs  main.rs  send_data.py  xconfig.json
