[package]
name = "ktw_rust_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4.39"
config = { version = "0.13.2", default-features = false, features = ["toml"] }
csv = "1.3"
futures = "0.3"
regex = "1"
reqwest = { version = "0.11", features = ["cookies", "json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
